# pcbmodelgen

./: .clang-format  CMakeLists.txt  README.md
examples/: config.json  generate_model.sh  simulation_script.m
examples/branch_line_coupler/: Makefile  config.json  pcb.hyp  pcb.kicad_pcb  pcb.pro  pcbmodelgen.json  simulate.sh  simulation_script.m
examples/test_pcb/: .octaverc  Makefile  config.json  env.sh  generate_model.sh  pcbmodelgen.json  simulation_script.m  test_pcb.kicad_pcb  test_pcb.pro
source/: ems.cpp  ems.hpp  ems_prims.cpp  ems_prims.hpp  kicadtoems_config.cpp  kicadtoems_config.hpp  kicadtoems_ui.cpp  kicadtoems_ui.hpp  main.cpp  misc.hpp  srecs.cpp  srecs.hpp
source/json/: json.h  jsoncpp.cpp
